# Cluster-Chat-Server-Software

./: .gitignore  CMakeLists.txt  README.md
include/: config.hpp  config.json  public.hpp
include/server/: chatserver.hpp  chatservice.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  redisclient.hpp  usermodel.hpp
include/server/model/: friendmodel.hpp  offlinemessage.hpp  user.hpp  usermodel.hpp
include/server/mysqlconnectionpool/: mysqlconnectionpool.hpp
include/server/mysqlconnnectionpool/: mysqlconnectionpool.hpp
include/server/redisconnectionpool/: redisconnectionpool.hpp
sql/: init_chat.sql  init_chat_data.sql  数据库表设计说明.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  friendmodel.cpp  groupmodel.cpp  main.cpp  offlinemessage.cpp  redisclient.cpp  usermodel.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessage.cpp  user.cpp  usermodel.cpp
src/server/mysqlconnectionpool/: mysqlconnectionpool.cpp
src/server/mysqlconnnectionpool/: mysqlconnnectionpool.cpp
src/server/redisconnectionpool/: redisconnectionpool.cpp
test/: CMakeLists.txt
test/testJson/: CMakeLists.txt  testJson.cpp
test/testMuduo/: CMakeLists.txt  muduo_server.cpp  testMuduo.cpp
test/testMuduo/src/: muduo_server.cpp
test/testMysqlConnectionPool/: CMakeLists.txt  testMysqlConnectionPool.cpp
test/testRedis/: CMakeLists.txt  testRedis.cpp
test_pressure/: CMakeLists.txt  test_pressure.cpp  test_pressure.py
